kubernetes/oci/compute/cluster/.argocd-state/argocd/argo-cd/templates/argocd-repo-server/metrics.yaml
---
# Source: argo-cd/templates/argocd-repo-server/metrics.yaml
apiVersion: v1
kind: Service
metadata:
  name: argocd-repo-server-metrics
  namespace: argocd
  labels:
    helm.sh/chart: argo-cd-10.10.0
    app.kubernetes.io/name: argocd-repo-server-metrics
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v3.5.4"
spec:
  type: ClusterIP  
  ports:
  - name: http-metrics
    protocol: TCP
    port: 8084
    targetPort: metrics
  selector:
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/instance: argocd
