kubernetes/oci/compute/cluster/.argocd-state/argocd/argo-cd/templates/argocd-repo-server/service.yaml
---
# Source: argo-cd/templates/argocd-repo-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: argo-cd-10.9.4
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/instance: argocd
    app.kubernetes.io/component: repo-server
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/version: "v3.5.3"
  name: argocd-repo-server
  namespace: argocd
spec:  
  ports:
  - name: tcp-repo-server
    protocol: TCP
    port: 8081
    targetPort: repo-server
  selector:
    app.kubernetes.io/name: argocd-repo-server
    app.kubernetes.io/instance: argocd
